# askama-template

./: .gitignore  Cargo.toml  README.md  restart.sh  server_control.sh  tailwind.config.js  watch.ps1  watch.sh
public/: style.css  tw.css
src/: main.rs
templates/: base.html  index.html
